--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,6 +5,7 @@
   border-bottom: 1px solid #545454;
   padding-top: 45px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 @media screen and (max-width:720px) {
