--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,7 @@
   width: 100%;
   padding: 0 24px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 @media screen and (max-width: 720px) {
