--- a/blocks/profile/__add-button/profile__add-botton.css
+++ b/blocks/profile/__add-button/profile__add-botton.css
@@ -1,15 +1,25 @@
 .profile__add-button {
-  width: 150px;
+  min-width: 150px;
   height: 50px;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
   align-self: center;
   border-radius: 2px;
   border: 2px solid #fff;
   background: initial;
   padding: 0;
   margin: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-size: 0;
   cursor: pointer;
+  -webkit-transition: .2s ease-in;
+  -o-transition: .2s ease-in;
+  transition: .2s ease-in;
+}
+
+.profile__add-button:hover {
+  opacity: 60%;
 }
 
 @media screen and (max-width: 768px) {
