--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,21 +4,32 @@
   font-size: 0;
   padding: 0;
   background: initial;
-  border: 1px solid #fff;
+  border: none;
   position: absolute;
   right: 60px;
   top: 37px;
   cursor: pointer;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: .2s ease-in;
+  -o-transition: .2s ease-in;
+  transition: .2s ease-in;
+}
+
+.profile__edit-button:hover {
+  opacity: 60%;
 }
 
 @media screen and (max-width: 768px) {
   .profile__edit-button {
+    width: 22px;
+    height: 22px;
     right: 0;
-    top: 42px;
+    top: 39px;
   }
 }
 
-@media screen and (max-width: 435px) {
+@media screen and (max-width: 425px) {
   .profile__edit-button {
     width: 18px;
     height: 18px;
