--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,3 +1,22 @@
 .profile__info {
-  display: inline-flex;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 22px 102px 0 30px;
+  margin-right: auto;
+  position: relative;
+}
+
+@media screen and (max-width: 768px) {
+  .profile__info {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 26px 42px 36px 42px;
+  }
+  
+}
+
+@media screen and (max-width: 425px) {
+  .profile__info {
+    padding: 26px 28px 36px 28px;
+  }
 }
