--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,13 +3,21 @@
   margin: 0 auto;
   padding: 41px 0 51px 0;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 @media screen and (max-width: 768px) {
   .profile {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
   
