--- a/pages/index.css
+++ b/pages/index.css
@@ -13,5 +13,12 @@
 @import url(../blocks/profile/__occupation/profile__occupation.css);
 @import url(../blocks/profile/__add-button/profile__add-botton.css);
 @import url(../blocks/profile/__icon-add/profile__icon-add.css);
+@import url(../blocks/elements/elements.css); /** elements */
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__image/element__image.css);
+@import url(../blocks/element/__info/element__info.css);
+@import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/footer/footer.css); /** footer */
 @import url(../blocks/footer/__copyright/footer__copyright.css);
