--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -1,4 +1,11 @@
 .element__button {
   border: none;
   background: inherit;
+  padding: 8px;
+  transition: .2s ease-in;
+  cursor: pointer;
+}
+
+.element__button:hover {
+  opacity: .5;
 }
