--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -2,6 +2,8 @@
   border: none;
   background: inherit;
   padding: 8px;
+  -webkit-transition: .2s ease-in;
+  -o-transition: .2s ease-in;
   transition: .2s ease-in;
   cursor: pointer;
 }
