--- a/blocks/element/__info/element__info.css
+++ b/blocks/element/__info/element__info.css
@@ -1,7 +1,14 @@
 .element__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
   min-height: 79px;
