--- a/blocks/popup/__occupation/popup__occupation.css
+++ b/blocks/popup/__occupation/popup__occupation.css
@@ -2,6 +2,7 @@
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
   height: 27px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin-bottom: 30px;
 }
