--- a/blocks/profile/__add-button/profile__add-botton.css
+++ b/blocks/profile/__add-button/profile__add-botton.css
@@ -6,7 +6,7 @@
   align-self: center;
   border-radius: 2px;
   border: 2px solid #fff;
-  background: initial;
+  background: transparent;
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
