--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -3,7 +3,7 @@
   height: 24px;
   font-size: 0;
   padding: 0;
-  background: initial;
+  background: transparent;
   border: none;
   position: absolute;
   right: 60px;
@@ -25,7 +25,7 @@
     width: 22px;
     height: 22px;
     right: 0;
-    top: 39px;
+    top: 38px;
   }
 }
 
