--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,13 +1,13 @@
 .profile__edit-button {
-  width: 24px;
-  height: 24px;
+  width: 40px;
+  height: 40px;
   font-size: 0;
-  padding: 0;
+  padding: 8px;
   background: transparent;
   border: none;
   position: absolute;
-  right: 60px;
-  top: 37px;
+  right: 52px;
+  top: 29px;
   cursor: pointer;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -22,17 +22,17 @@
 
 @media screen and (max-width: 768px) {
   .profile__edit-button {
-    width: 22px;
-    height: 22px;
-    right: 0;
-    top: 38px;
+    width: 38px;
+    height: 38px;
+    right: -8px;
+    top: 30px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .profile__edit-button {
-    width: 18px;
-    height: 18px;
-    top: 34px;
+    width: 34px;
+    height: 34px;
+    top: 26px;
   }
 }
