--- a/blocks/profile/__icon-add/profile__icon-add.css
+++ b/blocks/profile/__icon-add/profile__icon-add.css
@@ -1,4 +1,7 @@
 .profile__icon-add {
+  background-image: url(../../../images/add-button.svg);
+  background-size: cover;
+  margin: 0 auto;
   width: 22px;
   height: 22px;
 }
