--- a/blocks/element/__icon-like/_active/element__icon-like_active.css
+++ b/blocks/element/__icon-like/_active/element__icon-like_active.css
@@ -1,4 +1,4 @@
-.element__like_active {
+.element__icon-like_active {
   background-image: url(../../../../images/like-active.svg);
   width: 22px;
   height: 19px;
