--- a/blocks/element/__icon-like/element__icon-like.css
+++ b/blocks/element/__icon-like/element__icon-like.css
@@ -1,7 +1,6 @@
-.element__like {
+.element__icon-like {
   background-image: url(../../../images/like.svg);
   width: 22px;
   height: 19px;
-  border: none;
-  padding: 0;
+  background-size: cover;
 }
