--- a/blocks/popup/__icon-exit/popup__icon-exit.css
+++ b/blocks/popup/__icon-exit/popup__icon-exit.css
@@ -1,14 +1,12 @@
-.popup__exit {
+.popup__icon-exit {
   background-image: url(../../../images/exit.svg);
   width: 33px;
   height: 33px;
-  border: none;
-  padding: 0;
-  background-size: contain;
+  background-size: cover;
 }
 
 @media screen and (max-width: 435px) {
-  .popup__exit {
+  .popup__icon-exit {
     width: 21px;
     height: 21px;
   }
