--- a/blocks/profile/__add-button/profile__add-botton.css
+++ b/blocks/profile/__add-button/profile__add-botton.css
@@ -6,20 +6,14 @@
   align-self: center;
   border-radius: 2px;
   border: 2px solid #fff;
-  background: transparent;
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
   font-size: 0;
-  cursor: pointer;
-  -webkit-transition: .2s ease-in;
-  -o-transition: .2s ease-in;
-  transition: .2s ease-in;
+  background: transparent;
 }
 
 .profile__add-button:hover {
-  opacity: 60%;
+  opacity: .6;
 }
 
 @media screen and (max-width: 768px) {
