--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,8 @@
 @import url(../vendor/fonts.css); /** fonts */
 @import url(../blocks/root/root.css); /** root */
 @import url(../blocks/page/page.css); /** page */
+@import url(../blocks/section/section.css); /** section */
+@import url(../blocks/button/buttton.css);/** button */
 @import url(../blocks/header/header.css); /** header */
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css); /** profile */
@@ -18,9 +20,9 @@
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__info/element__info.css);
 @import url(../blocks/element/__title/element__title.css);
-@import url(../blocks/element/__button/element__button.css);
-@import url(../blocks/element/__like/element__like.css);
-@import url(../blocks/element/__like/_active/element__like_active.css);
+@import url(../blocks/element/__like-button/element__like-button.css);
+@import url(../blocks/element/__icon-like/element__icon-like.css);
+@import url(../blocks/element/__icon-like/_active/element__icon-like_active.css);
 @import url(../blocks/footer/footer.css); /** footer */
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css); /** popup */
@@ -32,4 +34,4 @@
 @import url(../blocks/popup/__exit-button/popup__exit-button.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__button-text/popup__button-text.css);
-@import url(../blocks/popup/__exit/popup__exit.css);
+@import url(../blocks/popup/__icon-exit/popup__icon-exit.css);
