--- a/blocks/element/__icon-like/_active/element__icon-like_active.css
+++ b/blocks/element/__icon-like/_active/element__icon-like_active.css
@@ -2,4 +2,6 @@
   background-image: url(../../../../images/like-active.svg);
   width: 22px;
   height: 19px;
+  display: block;
+  background-size: cover;
 }
