--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -5,4 +5,7 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin-bottom: 30px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.21;
 }
