--- a/blocks/popup/__occupation/popup__occupation.css
+++ b/blocks/popup/__occupation/popup__occupation.css
@@ -4,5 +4,8 @@
   height: 27px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  margin-bottom: 30px;
+  margin-bottom: 45px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.21;
 }
