--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,8 +5,8 @@
   -webkit-box-sizing: border-box;
 }
 
-@media screen and (max-width: 720px) {
-  .page {
-    padding: 0 19px;
+@media screen and (max-width: 425px) {
+  .page{
+    padding: 0;
   }
 }
