--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -17,5 +17,10 @@
     align-items: center;
     padding: 41px 0 36px 0;
   }
-  
+}
+
+@media screen and (max-width: 425px) {
+  .profile {
+    padding: 41px 19px 36px 19px;
+  }
 }
