--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,11 +4,8 @@
   font-size: 0;
   padding: 8px;
   border: none;
-  position: absolute;
-  right: 52px;
-  top: 29px;
   background: transparent;
-  background-size: contain;
+  margin: 6px 0 0 10px
 }
 
 .profile__edit-button:hover {
@@ -17,6 +14,8 @@
 
 @media screen and (max-width: 768px) {
   .profile__edit-button {
+    margin: 0;
+    position: absolute;
     width: 38px;
     height: 38px;
     right: -8px;
