--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -5,7 +5,7 @@
   padding: 8px;
   border: none;
   background: transparent;
-  margin: 6px 0 0 10px
+  margin: 6px 0 0 10px;
 }
 
 .profile__edit-button:hover {
