--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,8 @@
 .header {
   min-height: 118px;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
   padding-top: 45px;
+  
 }
 
 @media screen and (max-width: 425px) {
