--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -7,6 +7,7 @@
   grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 425px) {
