--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,7 @@
 @import url(../blocks/page/page.css); /** page */
 @import url(../blocks/section/section.css); /** section */
 @import url(../blocks/button/buttton.css);/** button */
+@import url(../blocks/input/input.css); /** input */
 @import url(../blocks/header/header.css); /** header */
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css); /** profile */
@@ -31,8 +32,6 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__form/popup__form.css);
-@import url(../blocks/popup/__name/popup__name.css);
-@import url(../blocks/popup/__occupation/popup__occupation.css);
 @import url(../blocks/popup/__exit-button/popup__exit-button.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__button-text/popup__button-text.css);
