--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,12 +1,11 @@
 .element__title {
+  display: inline; 
   color: #000;
   font-weight: 900;
   font-size: 24px;
   line-height: 1.21;
-  -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  margin: 0;
-  margin-right: 20px;
+  margin: 0 12px 0 0;
 }
