--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -5,6 +5,9 @@
   color: #fff;
   padding: 0;
   background: #000;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.21;
 }
 
 .popup__save-button:hover {
@@ -14,5 +17,7 @@
 @media screen and (max-width: 425px) {
   .popup__save-button {
     height: 46px;
+    font-size: 14px;
+    line-height: 1.21;
   }
 }
