--- a/blocks/element/__info/element__info.css
+++ b/blocks/element/__info/element__info.css
@@ -1,7 +1,13 @@
+
 .element__info {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 38px;
   grid-template-columns: 1fr 38px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   min-height: 79px;
   padding: 0 12px 0 20px;
