--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -4,6 +4,7 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 1.21;
+  -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
