--- a/pages/index.css
+++ b/pages/index.css
@@ -4,7 +4,6 @@
 @import url(../blocks/page/page.css); /** page */
 @import url(../blocks/section/section.css); /** section */
 @import url(../blocks/button/buttton.css);/** button */
-@import url(../blocks/input/input.css); /** input */
 @import url(../blocks/header/header.css); /** header */
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css); /** profile */
@@ -29,5 +28,6 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__exit-button/popup__exit-button.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
