--- a/pages/index.css
+++ b/pages/index.css
@@ -31,3 +31,4 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__exit-button/popup__exit-button.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup-place/popup-place.css); /** popup-place/
