--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,5 +8,8 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity .3s linear;
 }
