--- a/pages/index.css
+++ b/pages/index.css
@@ -32,4 +32,5 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__exit-button/popup__exit-button.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
-@import url(../blocks/popup-place/popup-place.css); /** popup-place/
+@import url(../blocks/popup-place/popup-place.css); /** popup-place */
+@import url(../blocks/popup-image/popup-image.css); /** popup-image */
