--- a/blocks/popup-image/popup-image.css
+++ b/blocks/popup-image/popup-image.css
@@ -11,5 +11,5 @@
   display: flex;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s, opacity .3s linear;
+  transition: visibility .5s, opacity .3s linear;
 }
