--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,12 +4,12 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(0, 0, 0,.5);
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s, opacity .3s linear;
 }
