--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -3,10 +3,10 @@
   font-size: 12px;
   line-height: 1.21;
   font-weight: 400;
-  margin: 5px 0 13px;
-  height: 12px;
+  margin: 4px 0 0;
+  min-height: 28px;
 }
 
 .popup__input-error:last-of-type {
-  margin-bottom: 31px;
+  margin-bottom: 20px;
 }
