validation is fixed

--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -1,6 +1,6 @@
 .popup__input-error {
   color: #f00;
-  font-size: 12px;
+  font-size: 0;
   line-height: 1.21;
   font-weight: 400;
   margin: 4px 0 0;
