--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,4 +2,10 @@
   width: 120px;
   height: 120px;
   border-radius: 60px;
+  object-fit: cover;
+  background-position: center;
+}
+
+.profile__avatar:hover {
+  opacity: .2;
 }
